--- a/1201561007_DobromirKostov/MEAN/package.json
+++ b/1201561007_DobromirKostov/MEAN/package.json
@@ -1,9 +1,9 @@
 {
-	"name"         : "ContactBook",
-	"version"      : "1.0.0",
-	"description"  : "This is a simple contact book.",
+	"name"         : "PhoneBook",
+	"version"      : "1.1.0",
+	"description"  : "My PhoneBook",
 	"main"         : "server.js",
-	"author"       : "Nikolay Ivanov",
+	"author"       : "Dobromir Kostov",
 	"dependencies" : {
 		"express"    : "~3.4.4",
 		"mongoose"   : "~3.6.2"
