--- a/1101561009_GeorgiKerezov/package.json
+++ b/1101561009_GeorgiKerezov/package.json
@@ -1,9 +1,9 @@
 {
-	"name"         : "node-todo",
+	"name"         : "simple-phonebook",
 	"version"      : "0.0.0",
-	"description"  : "Simple todo application.",
+	"description"  : "Simple Phonebook",
 	"main"         : "server.js",
-	"author"       : "FMI Front End",
+	"author"       : "Georgi Kerezov",
 	"dependencies" : {
 		"express"    : "~3.4.4",
 		"mongoose"   : "~3.6.2"
