--- a/1201561019_AneliqIvanova/package.json
+++ b/1201561019_AneliqIvanova/package.json
@@ -3,7 +3,7 @@
 	"version"      : "0.0.0",
 	"description"  : "Simple todo application.",
 	"main"         : "server.js",
-	"author"       : "FMI Front End",
+	"author"       : "Aneliq",
 	"dependencies" : {
 		"express"    : "~3.4.4",
 		"mongoose"   : "~3.6.2"
