Denislav Lefterov Final Commit

--- a/1201561008_DenislavLefterov/MEAN/package.json
+++ b/1201561008_DenislavLefterov/MEAN/package.json
@@ -1,7 +1,7 @@
 {
 	"name"         : "GuestBook",
-	"version"      : "1.0.1",
-	"description"  : "This is a GuestBook for users.",
+	"version"      : "1.0.0",
+	"description"  : "A great GuesBook.",
 	"main"         : "server.js",
 	"author"       : "Denislav Lefterov 1201561008",
 	"dependencies" : {
